<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Election Tracker</string>
    <string name="ballot_image_content_description">Home screen logo image</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved elections</string>
    <string name="follow_election">Follow election</string>
    <string name="unfollow_election">Unfollow election</string>
    <string name="settings">Settings</string>

    <string name="election_info_text">Election Information %s</string>
    <string name="see_voter_locations">See voter locations</string>
    <string name="see_ballot_info">See ballot information</string>
    <string name="error_open_ballot_info">Failed to open ballot information</string>
    <string name="error_open_election_info">Failed to open election information</string>
    <string name="error_location_disabled">You need to enable location for your device in order to find your location.</string>
    <string name="error_location_permission_required">You need to enable location in order to find your location</string>
    <string name="error_location_not_found">Couldn\'t find your location</string>
    <string name="error_location_parse_geocode">Something went wrong finding your location</string>
    <string name="error_representative_search">Something went wrong looking up your representatives</string>
    <string name="error_state_required">Please select a state to begin search</string>
    <string name="error_no_internet_detected">No internet connection detected</string>
    <string name="voter_info_fragment_title">Voter information</string>
    <string name="error_loading_elections">Failed to retrieve election information</string>
    <string name="representative_search">Representative search</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city_text">City</string>
    <string name="zip">Zip</string>
    <string name="my_representatives">My representatives</string>
    <string name="use_my_location">Use my location</string>


</resources>
