<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="nav_graph"
    app:startDestination="@id/launchFragment">

    <fragment
        android:id="@+id/launchFragment"
        android:name="com.example.android.electiontracker.ui.launch.LaunchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_launch">
        <action
            android:id="@+id/action_launchFragment_to_electionsFragment"
            app:destination="@id/electionsFragment" />
        <action
            android:id="@+id/action_launchFragment_to_representativeFragment"
            app:destination="@id/representativeFragment" />
    </fragment>

    <fragment
        android:id="@+id/representativeFragment"
        android:name="com.example.android.electiontracker.ui.representative.RepresentativeFragment"
        android:label="@string/find_my_representatives"
        tools:layout="@layout/fragment_representative"></fragment>
    <fragment
        android:id="@+id/voterInfoFragment"
        android:name="com.example.android.electiontracker.ui.voterinfo.VoterInfoFragment"
        android:label="@string/voter_info_fragment_title">
        <argument
            android:name="arg_election"
            app:argType="com.example.android.electiontracker.network.models.Election" />
    </fragment>
    <fragment
        android:id="@+id/electionsFragment"
        android:name="com.example.android.electiontracker.ui.election.ElectionsFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_electionsFragment_to_voterInfoFragment"
            app:destination="@id/voterInfoFragment" />
    </fragment>

</navigation>
