<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.electiontracker.ui.voterinfo.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.electiontracker.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            android:title="@{viewModel.election.name}"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            android:text="@{viewModel.voterInfo.election.electionDay.toString()}"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginTop="@dimen/default_margin"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:electionInfoTitle="@{viewModel.voterInfo}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            tools:text="Election information New York" />

        <Button
            android:id="@+id/state_locations"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/see_voter_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:text="Voter locations" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            android:text="@string/see_ballot_info"
            tools:text="Ballot info"/>

<!--        <androidx.constraintlayout.widget.Group-->
<!--            android:id="@+id/address_group"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:constraint_referenced_ids="state_correspondence_header,address" />-->

<!--        <TextView-->
<!--            android:id="@+id/state_correspondence_header"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toBottomOf="@id/state_ballot"-->
<!--            app:layout_constraintStart_toStartOf="@id/election_date" />-->

<!--        <TextView-->
<!--            android:id="@+id/address"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@{viewModel.voterInfo.state.get(0).electionAdministrationBody.}"-->
<!--            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"-->
<!--            app:layout_constraintStart_toStartOf="@id/election_date" />-->

        <Button
            android:id="@+id/follow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/follow_election"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>